--- a/PycharmProjects/DjangoGeekShop/ordersapp/templates/ordersapp/order_form.html
+++ b/PycharmProjects/DjangoGeekShop/ordersapp/templates/ordersapp/order_form.html
@@ -32,20 +32,18 @@
                                 {% endif %}
                                 {{ field.errors.as_ul }}
 
-                                {% if field.name == 'price' %}
-                                    {% if not field.value %}
-                                    {% else %}
-                                        <span class="orderitems-{{ forloop.parentloop.counter0 }}-price">
-                                            {{ field.value }} руб </span>
-                                    {% endif %}
-                                {% else %}
-                                    {% if field.name == 'price' %}
+                                {% if field.name != 'price' %}
+                                    {% if field.name == 'product' %}
                                         {% cache 3600 orderitemform_product field.value %}
                                             {{ field }}
                                         {% endcache %}
                                     {% else %}
                                         {{ field }}
                                     {% endif %}
+                                {% else %}
+                                    <span class="orderitems-{{ forloop.parentloop.counter0 }}-price">
+                                            {{ field.value }} руб </span>
+
                                 {% endif %}
 
 
